plugins {
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'java'
    id 'war'
}

group = 'com.ticketSwap'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'javax.mail:mail:1.4.7'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
}

compileJava {     options.compilerArgs << '--add-exports=java.base/sun.security.x509=ALL-UNNAMED' }
compileJava {     options.compilerArgs << '--add-exports=java.base/sun.security.tools.keytool=ALL-UNNAMED' }
tasks.named('test') {
    useJUnitPlatform()
}
